<resources>
    <string name="app_name">Mission 2021</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="nextLabel">Next</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="add_user">Add User</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="enterUserDetails">User Details</string>
    <string name="addUser">Add User</string>
    <string name="tapOnImage">Tap on image to add photo *</string>
    <string name="submit">Create User</string>
    <string name="search_user">Search Member</string>
    <string name="select_user">Select Member</string>
    <string name="title_activity_member_access_form">MemberAccessForm</string>
    <string name="title_activity_member_access_list">MemberAccessList</string>
    <string name="edit_member">Edit Member</string>
    <string name="edit_member_details">Edit Member Details</string>

    <!--Labels-->
    <string name="chooseDist">Choose District</string>
    <string name="chooseUnion">Choose Union</string>
    <string name="chooseAssembly">Choose Assembly</string>
    <string name="choosePanchayat">Choose Panchayat</string>
    <string name="chooseVillage">Choose Village</string>

    <string name="dist">District</string>
    <string name="union">Union</string>
    <string name="assembly">Assembly</string>
    <string name="panchayat">Panchayat</string>
    <string name="village">Village</string>

    <!--titles -->
    <string name="createUser">Create User</string>
    <string name="createUserDetails">Create User: Add Details</string>
    <string name="memberAccessLbl">Member Access</string>
    <string name="membersList">Members List</string>
    <string name="changePassword">Change Password</string>

    <string name="updateUser">Update User</string>
    <string name="updateUserDetails">Update User: Update Details</string>

    <string name="memberCreate">Member Create</string>
    <string name="memberAccess">Member Access</string>
    <string name="memberList">Member List</string>
    <string name="memberSearch">Member Search</string>
    <string name="report">Report</string>
    <string name="memberLogout">Logout</string>

    <string name="phoneNumberLabel">Phone number</string>
    <string name="role">Role</string>
    <string name="memberCode">Member Code</string>
    <string name="name">Name</string>

    <string name="savelbl">Save</string>
    <string name="cancellbl">Cancel</string>

    <string name="continue_lbl">Continue</string>
    <string name="s_of"><![CDATA[<b><font color="#FF0000">S/o</font></b>]]></string>
    <string name="d_of"><font color='red'>D/o</font></string>

    <string name="action_search">Search</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_report">ReportActivity</string>

    <string name="villageName">Village Name:</string>
    <string name="villageId">Village Id:</string>
    <string name="memberCount">Member Count:</string>

    <!--Dialog titles-->
    <string name="okayTitle">Message</string>
    <string name="okayButtonText">Ok</string>
    <string name="cancelButtonText">Cancel</string>

</resources>
