<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="0dp"
        app:theme="@style/ToolbarStyle"
        app:title="">

        <TextView
            android:id="@+id/homeToolbarTitle"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lato"
            android:text="@string/updateUser"
            android:textColor="@color/colorPrimary" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                android:padding="4dp"
                android:singleLine="true"
                android:text="@string/dist"
                android:textColor="@color/labelColor"
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                android:padding="4dp"
                android:singleLine="true"
                android:text="@string/assembly"
                android:textColor="@color/labelColor"
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/assembly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:maxLines="1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                android:padding="4dp"
                android:singleLine="true"
                android:text="@string/union"
                android:textColor="@color/labelColor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/union"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:maxLines="1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                android:padding="4dp"
                android:singleLine="true"
                android:text="@string/panchayat"
                android:textColor="@color/labelColor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/panchayat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                android:padding="4dp"
                android:singleLine="true"
                android:text="@string/village"
                android:textColor="@color/labelColor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:maxLines="1" />


        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_forward_white_24dp" />
</FrameLayout>